--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,9 @@ Thumbs.db
 .env.*.local
 test_llm_providers.py
 TEST_RESULTS.md
+
+# Frontend (Node.js)
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/package-lock.json
