--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include README.md
 include CHANGELOG.md
 include CONTRIBUTING.md
 recursive-include tests *.py
+recursive-include sklearn_diagnose/server/static *
